--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,7 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+
+jeffrey egbunu<jefferyegbunu@gmail.com>
+ Esther Adufe Olaniyi<olaniyiesther17@yahoo.com>
